Final changes- added morecontent, added span data descr

--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
         <ul class="content">
             <li>An otter pup's fur is so dense that it can't dive underwater until it gets its adult fur!</li>
             <li>Sea otter fur is actually the densest of any mammal at about 1 million hairs per square inch!</li>
-            <li>Sea otters eat around 25 percent of their body weight in food every day! (Occasionally they will dive as deep as 250 feet to find food!)</li>
+            <li>Sea otters eat around 25 percent of their body weight in <span data-descr="Occasionally they will dive as deep as 250 feet to find food!">food every day!</span></li>
+            <li>Sea otter teeth are twice as strong as human teeth!</li>
         </ul>
         <img class="imagetwo" src="./assets/Otter Image 2.jpeg" alt="A cute baby otter">
     <h3 id="DidYouKnow">Did You Know?</h3>
         <ul class="content">
             <li>An otter's Lung capacity is 2.5 times greater than that of a similar-sized land mammal</li>
-            <li>Otters are an essential keystone species</li>
+            <li>Otters are an essential <span data-descr="A species on which other species in an ecosystem largely depend, such that if it were removed the ecosystem would change drastically">keystone species</span></li>
             <li>A group of resting otters is called a raft</li>
+            <li>Sea otters are one of a few mammal species known to utilize tools to help them survive</li>
+            <li>Sea otters are Sophie's favorite animal!</li>
+
         </ul>
         <img class="imagethree" src="./assets/Otter Image 3.webp" alt="An otter yawning">
     <h4 id="AboutTheCreator">About the Creator</h4>
